Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11729

ARM: sanity test_810: BAD WRITE CHECKSUM with adler

XMLWordPrintable

    • 3
    • 9223372036854775807

      This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/a298010c-f721-11e8-86c0-52540065bddc

      The test_810 added for LU-11663 fails on ARM on ldiskfs with the following test error:

      osc.lustre-OST0006-osc-ffff800039d7f800.checksum_type=adler
      fail_loc=0x411
      dd: error writing '/mnt/lustre/f810.sanity': Input/output error
      6bf5f3489c417a2e6f9e223278d93278  /mnt/lustre/f810.sanity != d375c4c8a12ae6de34e09e696c3725b1  /mnt/lustre/f810.sanity
      

      The client console logs show the checksums do not match between the client and server so there is still some kind of alignment problem:

      LustreError: 132-0: lustre-OST0000-osc-ffff800039d7f800: BAD WRITE CHECKSUM: changed in transit before arrival at OST: from 10.9.3.137@tcp inode [0x200006991:0xc:0x0] object 0x0:27458 extent [10240-20479], original client csum 6a00237 (type 20), server csum ab0036d (type 20), client csum now 6a00237
      LustreError: 22024:0:(osc_request.c:1923:osc_brw_redo_request()) @@@ redo for recoverable error -11  req@ffff80003069f300 x1618848577499536/t42949672971(42949672971) o4->lustre-OST0000-osc-ffff800039d7f800@10.9.3.137@tcp:6/4 lens 488/416 e 0 to 0 dl 1543857802 ref 2 fl Interpret:RM/0/0 rc 0/0
      LustreError: 22024:0:(osc_request.c:2048:brw_interpret()) lustre-OST0000-osc-ffff800039d7f800: too many resent retries for object: 0:27458, rc = -11.
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity test_810 - 6bf5f3489c417a2e6f9e223278d93278 /mnt/lustre/f810.sanity != d375c4c8a12ae6de34e09e696c3725b1 /mnt/lustre/f810.sanity

            dongyang Dongyang Li
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: